Fri Aug  9 07:16:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* ext/io/console/console.c: delete redefinition of rb_cloexec_open.
	  drop support for 1.8 and 1.9 from the next release of io-console gem.

Fri Aug  9 19:13:54 2013  Koichi Sasada  <ko1@atdot.net>

	* NEWS: update about new methods for Binding.

Fri Aug  9 18:48:09 2013  Koichi Sasada  <ko1@atdot.net>

	* proc.c: add Binding#local_variable_get/set/defined?
	  to access local variables which a binding contains.
	  Most part of implementation by nobu.

	* test/ruby/test_proc.rb: add a tests for above.

	* vm.c, vm_core.h (rb_binding_add_dynavars): add a new function
	  to add a new environment to create space for new local variables.

Fri Aug  9 14:02:01 2013  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/make-snapshot: Fix order of priority for option parameter.

Fri Aug  9 12:06:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_str_normalize_ospath): normalize to Normalization Form C
	  using CFString.

Fri Aug  9 10:53:57 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* time.c (get_timeval, get_new_timeval): use rb_obj_class()
	  instead of CLASS_OF() because CLASS_OF() may return
	  a singleton class.

Fri Aug  9 10:42:11 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (vm_invoke_block): returning from lambda proc
	  now always exits from the Proc. [ruby-core:56193] [Feature #8693]

	* NEWS, test/ruby/test_lambda.rb: ditto. Patch by nobu.

Fri Aug  9 00:10:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (lazy_zip_func): fix non-single argument.  fix
	  out-of-bound access and pack multiple yielded values.
	  [ruby-core:56383] [Bug #8735]

Thu Aug  8 23:01:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_singleton_p): new method Module#singleton_class? to
	  return whether the receiver is a singleton class or not.
	  [ruby-core:51087] [Feature #7609]

Thu Aug  8 21:56:44 2013  Tanaka Akira  <akr@fsij.org>
